# learnmate-backend

./: .gitignore  README.md  database.db  pyproject.toml
app/: db_adapter.py  main.py  router.py  schema.py  usecase.py
app/dependencies/: elevenlabs_client.py  http.py  openai_client.py
