[tool.poetry]
name = "learnmate"
version = "0.1.0"
description = ""
authors = ["ashleymavericks <singhanurag024@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
pydantic = "^2.9.1"
aiohttp = "^3.10.5"
elevenlabs = "^1.8.0"
sqlmodel = "^0.0.22"
openai = "^1.44.1"
aiosqlite = "^0.20.0"
greenlet = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
